--- a/Sunshine/app/src/main/res/values/strings.xml
+++ b/Sunshine/app/src/main/res/values/strings.xml
@@ -3,9 +3,27 @@
 
     <string name="app_name">Sunshine</string>
     <string name="hello_world">Hello world!</string>
+
     <string name="action_refresh">Refresh</string>
     <string name="action_settings">Settings</string>
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <string name="pref_location_label">Location</string>
+    <string name="pref_location_key" translatable="false">Location</string>
+    <string name="pref_location_default" translatable="false">52040,BRA</string>
+
+    <string name="pref_units_key">units</string>
+    <string name="pref_units_label">Temperature Units</string>
+
+    <string name="pref_units_metric">Metric</string>
+    <string name="pref_units_imperial">Imperial</string>
+    <string name="pref_units_metric_value">metric</string>
+    <string name="pref_units_imperial_value">imperial</string>
+    <string name="action_map">Map</string>
+    <string name="action_share">Share</string>
 
 </resources>
